# autosub

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml  release.yml
scripts/: check_release.py  generate_melfilters.py
src/: audio.rs  config.rs  lib.rs  main.rs  srt.rs  translate.rs  whisper.rs
