[package]
name = "autosub"
version = "0.1.0"
edition = "2021"
description = "CLI tool for video transcription and subtitle generation using Whisper"
license = "MIT"

[dependencies]
# Candle for Whisper transcription
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = "0.22"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# LLM integration (multi-provider support)
llm = { version = "1.3", features = ["openai", "anthropic", "ollama", "google", "deepseek"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling & logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress indication
indicatif = "0.18"

# Directories for cache
dirs = "6"

# Audio processing
rubato = "0.16"
bytemuck = "1.21"
hound = "3.5"
byteorder = "1.5"

[features]
default = ["metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
